--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.5.5",
-    "core-elements": "Polymer/core-elements#~0.5.5"
+    "core-elements": "Polymer/core-elements#~0.5.5",
+    "cocoa-elements": "hinaloe/cocoa-elements"
   }
 }
