--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~0.5.5",
     "core-elements": "Polymer/core-elements#~0.5.5",
-    "cocoa-elements": "hinaloe/cocoa-elements"
+    "cocoa-elements": "hinaloe/cocoa-elements",
+    "paper-elements": "Polymer/paper-elements#~0.5.5"
   }
 }
