--- a/dest/data/cocoa.yaml
+++ b/dest/data/cocoa.yaml
@@ -4,4 +4,4 @@
   detail: command line tools of cocoa on Python
   repo: https://github.com/Himanoa/Cocoa.git
   author: Himanoa
-
+  avatar: https://avatars2.githubusercontent.com/u/6220062
